unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_BDO__c</fullName>
        <description>Automatically Updated Via Workflow from Accounts (field BDO). It is used to assist in &quot;filtering&quot; Contacts in the Lookup.</description>
        <label>Account BDO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(INCLUDES( Account.Multi_Type__c , &quot;Ag Water Supply&quot;), &quot;Ag Water Supply&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Air District&quot;), &quot;Air District&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Water Supplier&quot;), &quot;Water Supplier&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;County Agricultural Commissioner&quot;), &quot;County Agricultural Commissioner&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;CUPA&quot;), &quot;CUPA&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;District/City Attorney Office&quot;), &quot;District/City Attorney Office&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Division of Water Rights Partner Agency&quot;), &quot;Division of Water Rights Partner Agency&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;DoD&quot;), &quot;DoD&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Federal Agency&quot;), &quot;Federal Agency&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;LEA&quot;), &quot;LEA&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Local Law Enforcement&quot;), &quot;Local Law Enforcement&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;LPA&quot;), &quot;LPA&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;MS4&quot;), &quot;MS4&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;OWTS&quot;), &quot;OWTS&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Small Water Supplier&quot;), &quot;Small Water Supplier&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;State Agency&quot;), &quot;State Agency&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Urban Water Supplier&quot;), &quot;Urban Water Supplier&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Vector Control&quot;), &quot;Vector Control&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Unknown&quot;), &quot;Unknown&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Waste Water&quot;), &quot;Waste Water&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;State Water Resources Regional Board&quot;), &quot;State Water Resources Regional Board&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;SWRCB Division or Office&quot;), &quot;SWRCB Division or Office&quot;, NULL)  + BR() + 
IF(INCLUDES( Account.Multi_Type__c , &quot;Water Quality Non-Profit&quot;), &quot;Water Quality Non-Profit&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_Attempt_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Incorrect Attempt Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PasswordHash__c</fullName>
        <label>PasswordHash</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Code__c</fullName>
        <label>Reset Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_First_Failed_Attempt__c</fullName>
        <label>Time of First Failed Attempt</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <division>*</division>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CAMS_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CAMS</value>
        </filters>
        <label>All CAMS Contacts</label>
        <sharedTo>
            <group>CAMS_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Business_Contact</value>
        </filters>
        <label>Business Contacts</label>
        <sharedTo>
            <group>CERS_Help_Desk_Development_Team</group>
            <group>CERS_Help_Desk_Technical_Managers</group>
            <group>CERS_Help_Desk_Technical_Support</group>
            <group>CERS_Help_Desk_Unified_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CUPA_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CalEPA_Partner</value>
        </filters>
        <filters>
            <field>Account_Type__c</field>
            <operation>contains</operation>
            <value>CUPA</value>
        </filters>
        <label>CUPA Contacts</label>
        <sharedTo>
            <group>CERS_Help_Desk_Development_Team</group>
            <group>CERS_Help_Desk_Technical_Managers</group>
            <group>CERS_Help_Desk_Technical_Support</group>
            <group>CERS_Help_Desk_Unified_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaint_Management_CalEPA_Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>Inactive__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <division>*</division>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CalEPA_Partner</value>
        </filters>
        <label>CalEPA Partners</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Partners</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Inactive__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CalEPA_Partner</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Registered_CalEPA_Partners</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <division>*</division>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CalEPA_Partner</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IsRegistered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Registered CalEPA Partners</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Business_Contact</fullName>
        <active>true</active>
        <label>Business Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAMS</fullName>
        <active>true</active>
        <label>CAMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAMS_Company_Author_Contact</fullName>
        <active>true</active>
        <label>Company Author Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>CalEPA_Employee</fullName>
        <active>true</active>
        <label>CalEPA Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>CalEPA_Partner</fullName>
        <active>true</active>
        <description>i.e.  County Agencies, CUPAs, Departments etc.</description>
        <label>CalEPA Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Constituent</fullName>
        <active>true</active>
        <label>Constituent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>